kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lol-insights-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: lol-insights-api
  template:
    metadata:
      labels:
        app: lol-insights-api
    spec:
      containers:
        - name: api
          image: europe-west2-docker.pkg.dev/lol-insights-490418/lol-insights/api:v3
          ports:
            - containerPort: 8000
          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 15
            periodSeconds: 10
