kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lol-insights-service
spec:
  selector:
    app: lol-insights-api
  ports:
    - port: 80
      targetPort: 8000
  type: ClusterIP
